change grid and drawing work but not at the same time

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="buttons">
-        <button class="changeGrid">Change Grid</button>
+        <button class="change-grid">Change Grid</button>
     </div>
     <div class="container">
         
