finished the changeGrid feature

--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-    <div class="buttons">
-        <button class="change-grid">Change Grid</button>
-    </div>
+<div class="flex-wrapper">
+    <div class="play-area">
+   
     <div class="container">
         
     </div>
+    <div class="buttons">
+        <button class="low-opacity">Low Opacity</button>
+        <button class="rgb">RGB Button</button>
+        <button class="change-grid">Change Grid</button>
+    </div>
+</div>
+    <div class="footer">FeliciaMM</div>
+</div>
 </body>
 </html>
